<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">呛蟹笑话</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="isLoading">正在加载中...</string>
    <string name="newsDetails">详情</string>
    <string name="share">分享</string>
    <string name="setting">设置</string>
    <string name="help">帮助</string>
    <string name="advice">建议</string>
    <string name="zxxh">最新笑话</string>
    <string name="xhfl">笑话分类</string>
    <string name="xhds">笑话大赛</string>
    <string name="gxtp">搞笑图片</string>
    <string name="title_activity_postbar_details">贴吧</string>

</resources>
