<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_share"
        android:icon="@drawable/selector_icon_share"
        android:showAsAction="ifRoom"
        android:title="@string/share"/>
    <item
        android:id="@+id/menu_setting"
        android:showAsAction="never"
        
        android:icon="@drawable/icon_setting"
        android:title="@string/setting"/>
    <item
        android:id="@+id/menu_help"
        android:showAsAction="never"
        android:icon="@drawable/icon_help"
        android:title="@string/help"/>
    <item
        android:id="@+id/menu_advice"
        android:showAsAction="never"
        android:icon="@drawable/icon_advice"
        android:title="@string/advice"/>

</menu>